@@ -1,3 +1,8 @@
+2011-10-25	The InnoDB Team
+
+	* handler/ha_innodb.cc, row/row0ins.c:
+	Fix Bug#13002783 PARTIALLY UNINITIALIZED CASCADE UPDATE VECTOR
+
 2011-08-08	The InnoDB Team
 
 	* row/row0sel.c:
